# mint

./: Dockerfile  LICENSE  MINT_Excel_Template.xlsx  MyProject.code-workspace  README.md  docker-compose.m1.yaml  docker-compose.yaml  main.py  pyproject.toml
mint_package/: data_import.py  mathematical_model.py
