[tool.poetry]
name = "MINT"
version = "0.1.0"
description = ""
authors = ["Sandra Bronsvoort <hi@sandrabronsvoort.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.0.3"
pyomo = "^6.6.1"
pulp = "^2.7.0"
openpyxl = "^3.1.2"


[tool.poetry.group.dev.dependencies]
pylint = "^2.17.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
